<resources>
    <string name="app_name">智惠生活</string>
    <string name="bottom_text_1">首页</string>
    <string name="bottom_text_2">购物</string>
    <string name="bottom_text_4">我的</string>


    <!--登录-->
    <string name="login">登录</string>
    <string name="login_account">账号</string>
    <string name="login_psw">密码</string>
    <string name="login_input_phone">请输入帐号</string>
    <string name="login_input_psw">请输入密码</string>
    <string name="login_forget_psw">忘记密码</string>
    <string name="login_register">立刻注册</string>

    <!--会员注册,修改密码-->
    <string name="register_name">姓名(必填项)</string>
    <string name="register_need_local">服务区域编号(必填项)</string>
    <string name="register_server_local">服务区域</string>
    <string name="register_serverer_id">服务人编号</string>
    <string name="register_account">昵称</string>
    <string name="register_id_card">身份证号(必填项)</string>
    <string name="register_friends">亲友人编号(必填项)</string>
    <string name="register_bank">开户银行(必填项)</string>
    <string name="register_bank_account">银行账号(必填项)</string>
    <string name="register_mobile">手机号码(必填项)</string>
    <string name="register_local">省/市/区(必填项)</string>
    <string name="register_address">详细地址(必填项)</string>
    <string name="register_input_vcode">请输入验证码</string>
    <string name="register_send_vcoed">获取验证码</string>
    <string name="psd_limit">请输入支付密码</string>
    <string name="input_old_psd">请输入原密码</string>
    <string name="input_new_psd">请输入新密码</string>
    <string name="psd_sure">请再次输入密码</string>
    <string name="modify_sure">确定</string>


    <string name="business_name">店铺(必填项)</string>
    <string name="remarks">备注</string>
    <string name="remarks_tips">请输入备注</string>
    <string name="jiesuan">结算</string>

    <string name="store_id">店铺编号</string>
    <string name="store_address">收货地址(必填项)</string>


    <string name="choose_send_type">选择配送方式</string>
    <string name="input_service_id">请填写经销商编号</string>
    <string name="input_store_id">请填写店铺编号</string>
    <string name="hint_input_name">请输入姓名</string>
    <string name="hint_input_mobile">请输入手机号码</string>
    <string name="hint_choose_address">请选择省市区</string>
    <string name="hint_input_address">请输入详细地址</string>
    <string name="hint_input_update_level">请选择升级级别</string>

    <!--收货地址-->
    <string name="goods_consignee">收货人</string>
    <string name="goods_consignee_name">收货人:</string>
    <string name="goods_order_freight">运费:</string>
    <string name="goods_phone">手机号</string>
    <string name="goods_local_address">所在地区</string>
    <string name="goods_detail_address">详细地址</string>
    <string name="input_detail_address">请填写详细地址</string>
    <string name="input_address_phone">请填写手机号码</string>
    <string name="input_address_consignee">请填写收货人</string>
    <string name="input_length_limit">收货人长度必须大于2</string>


    <string name="goods_price">商品价格</string>
    <string name="uses_integral">总分值</string>
    <string name="total_payable">应付总额</string>
    <string name="postage">邮费</string>
    <string name="use_integral">(剩余积分</string>
    <string name="pay_wx">微信支付</string>
    <string name="right_now_pay">立即支付</string>

    <!--我的-->
    <string name="me_order">我的订单</string>

    <string name="declaration_register">用户注册</string>
    <string name="declaration_sale">用户消费</string>
    <string name="declaration_upgrade">用户升级</string>
    <string name="declaration_tiaobo">购物调拨</string>
    <string name="discount_coin">用户积分</string>
    <string name="net_coin">账户余额</string>

    <!--订单-->
    <string name="order_exit">取消订单</string>
    <string name="query_logistics">点击查看物流</string>
    <string name="go_pay">去付款</string>
    <string name="no_order_tip">还没有相关的订单呢</string>


    <!--个人信息-->
    <string name="personal_over">完成</string>
    <string name="personal_head_face">头像</string>
    <string name="personal_nickname">姓名</string>
    <string name="personal_phone">手机号</string>
    <string name="take_photo">拍摄</string>
    <string name="system_photo">从相册选择</string>
    <string name="pay_psd">支付密码</string>
    <string name="login_psd">登录密码</string>
    <string name="setting_exit_login">退出登录</string>
    <string name="about_app">版本信息</string>
    <string name="setting_delete_cache">清除缓存</string>
    <string name="me_center_info">个人中心</string>
    <string name="me_bind_card">银行卡管理</string>
    <string name="me_address">地址管理</string>
    <string name="me_agreement">购货申请</string>


    <!--地址管理-->
    <string name="goods_add_address">添加地址</string>
    <string name="add_goods_address">添加收货地址</string>
    <string name="nickname_save">保存</string>
    <string name="register_input_phone">请输入手机号码</string>
    <string name="prompt_phone_number_invalid">输入的手机号码无效，请输入正确的手机号码！</string>


    <!--绑定银行卡-->
    <string name="input_bank_card">请输入正确身份证号码</string>

    <string name="input_transfer_receiver_no">请填写受让方编号</string>
    <string name="input_transfer_price">请填写转账金额</string>
    <string name="input_transfer_psd">请填写支付密码</string>

    <!-- WXPayEntryActivity -->
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>

    <string name="limit_max_pay">输入的金额有误，最多能输入</string>



    <string name="customactivityoncrash_error_activity_error_occurred_explanation">发生意外错误。\n抱歉，给您带来不便。</string>
    <string name="customactivityoncrash_error_activity_restart_app">重新启动</string>
    <string name="customactivityoncrash_error_activity_close_app">关闭程序</string>
    <string name="customactivityoncrash_error_activity_error_details">错误日志</string>
    <string name="customactivityoncrash_error_activity_error_details_title">错误详情</string>
    <string name="customactivityoncrash_error_activity_error_details_close">关闭</string>
    <string name="customactivityoncrash_error_activity_error_details_copy">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_copied">复制日志</string>
    <string name="customactivityoncrash_error_activity_error_details_clipboard_label">错误信息</string>
</resources>
