<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_80"
        android:src="@mipmap/ic_launcher1"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_60"
        android:layout_marginLeft="@dimen/margin_30"
        android:layout_marginRight="@dimen/margin_30">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/margin_10">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/login_text"
                android:textSize="@dimen/textsize18"
                android:text="@string/login_account"/>

            <EditText
                android:id="@+id/et_login_input_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="@dimen/margin_10"
                android:textColor="@color/black_333333"
                android:textColorHint="@color/register_text_hint_bg"
                android:hint="@string/login_input_phone"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/margin_30"
            android:layout_marginBottom="@dimen/margin_10">

            <TextView
                android:id="@+id/ic_vcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/login_text"
                android:textSize="@dimen/textsize18"
                android:text="@string/login_psw"/>

            <EditText
                android:id="@+id/et_login_input_psd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_toRightOf="@+id/ic_vcode"
                android:layout_toLeftOf="@+id/tv_login_send_psw"
                android:layout_centerVertical="true"
                android:inputType="textPassword"
                android:textColor="@color/black_333333"
                android:textColorHint="@color/register_text_hint_bg"
                android:hint="@string/login_input_psw"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"/>

        <CheckBox
            android:id="@+id/cb_remember_psd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin_20"
            android:textColor="@color/green"
            android:checked="true"
            android:text="记住密码"/>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="@color/white"
            android:background="@drawable/login_button"
            android:textSize="@dimen/textsize18"
            android:layout_marginTop="@dimen/margin_20"/>

        <LinearLayout
            android:id="@+id/ll_login_send_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/margin_15">

            <TextView
                android:id="@+id/tv_login_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/login_register"
                android:textColor="@color/register_vcode_bg"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@color/black"
                android:textSize="@dimen/textsize13"
                android:text="@string/login_forget_psw"/>

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
