<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/sale_title"
        >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:src="@mipmap/ic_back" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/textsize18"
            android:text="保单详情"
            />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/sale_line"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/margin_50">
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_10"
        android:layout_marginRight="@dimen/margin_10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="经销商编号(必填项)"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/black_333333"
            android:layout_marginTop="@dimen/margin_15"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_servicer_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:textSize="@dimen/textsize14"
                android:inputType="number"
                android:hint="@string/input_service_id"
                android:textColorHint="@color/line"
                android:textColor="@color/sale_text_bg"/>

            <TextView
                android:id="@+id/tv_servicer_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="@dimen/textsize14"
                android:background="@null"
                android:textColor="@color/sale_text_bg"/>
            
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_update_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="升级级别"
                android:textSize="@dimen/textsize14"
                android:textColor="@color/black_333333"
                android:layout_marginTop="@dimen/margin_15"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_update_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_toLeftOf="@+id/iv_update_level"
                    android:textSize="@dimen/textsize14"
                    android:background="@null"
                    android:hint="@string/hint_input_update_level"
                    android:textColorHint="@color/line"
                    android:textColor="@color/sale_text_bg"/>

                <ImageView
                    android:id="@+id/iv_update_level"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/margin_10"
                    android:src="@mipmap/ic_right_arrow"/>

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>



        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_send_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="配送方式"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/black_333333"
            android:layout_marginTop="@dimen/margin_15"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_send_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/sale_text_bg"
                android:textSize="@dimen/textsize14"
                android:textColorHint="@color/pop_text"
                android:hint="@string/choose_send_type"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@mipmap/ic_right_arrow"
                android:textColor="@color/line"/>

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/line"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_store"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/store_id"
                android:textSize="@dimen/textsize14"
                android:textColor="@color/black_333333"
                android:layout_marginTop="@dimen/margin_15"
                />


            <EditText
                android:id="@+id/et_business_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:hint="@string/input_store_id"
                android:textColorHint="@color/line"
                android:textSize="@dimen/textsize14"
                android:inputType="number"
                android:textColor="@color/sale_text_bg"
                android:background="@null"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_personal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_name"
                android:textColor="@color/black_333333"
                android:layout_marginTop="@dimen/margin_15"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_marginBottom="@dimen/margin_10"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_sale_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/textsize14"
                    android:textColor="@color/sale_text_bg"
                    android:hint="@string/hint_input_name"
                    android:textColorHint="@color/line"
                    android:background="@null"
                    />

            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_mobile"
                    android:textColor="@color/black_333333"
                    android:layout_marginTop="@dimen/margin_15"
                    />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/et_sale_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/textsize14"
                        android:textColor="@color/sale_text_bg"
                        android:background="@null"
                        android:hint="@string/hint_input_mobile"
                        android:textColorHint="@color/line"
                        />

                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_local"
                    android:textSize="@dimen/textsize14"
                    android:layout_marginTop="@dimen/margin_15"
                    android:textColor="@color/black_333333"/>

                <TextView
                    android:id="@+id/tv_province"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textSize="@dimen/textsize14"
                    android:textColor="@color/sale_text_bg"
                    android:hint="@string/hint_choose_address"
                    android:textColorHint="@color/line" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/store_address"
                    android:textSize="@dimen/textsize14"
                    android:layout_marginTop="@dimen/margin_15"
                    android:textColor="@color/black_333333"/>

                <EditText
                    android:id="@+id/et_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:textColor="@color/sale_text_bg"
                    android:textSize="@dimen/textsize14"
                    android:background="@null"
                    android:hint="@string/hint_input_address"
                    android:textColorHint="@color/line" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:background="@color/line"/>
            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remarks"
                android:textSize="@dimen/textsize14"
                android:textColor="@color/black_333333"
                android:layout_marginTop="@dimen/margin_15"
                />


            <EditText
                android:id="@+id/et_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/remarks_tips"
                android:textSize="@dimen/textsize14"
                android:textColorHint="@color/line"
                android:textColor="@color/sale_text_bg"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_10"
                android:background="@null"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/line"/>

        </LinearLayout>


    </LinearLayout>

        </ScrollView>

    </LinearLayout>
    
    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:gravity="center"
        android:background="@color/green"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/textsize15"
        android:textColor="@color/white"
        android:text="下一步"/>

</RelativeLayout>
