<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/sale_title"
        >

        <LinearLayout
            android:id="@+id/ll_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_10"
                android:src="@mipmap/ic_back" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/black_333333"
            android:textSize="@dimen/textsize18"
            android:text="转账"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginTop="@dimen/margin_15"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize14"
        android:layout_marginLeft="@dimen/margin_10"
        android:text="您的折扣余额为：￥"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/textsize16"
        android:textColor="@color/setting_red_color"
        />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="@dimen/margin_15"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="转出方编号:"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/black_333333"/>

        <TextView
            android:id="@+id/tv_sender"
            android:textSize="@dimen/textsize14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textsize14"
            android:text="转帐日期:"
            android:textColor="@color/black_333333"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:textSize="@dimen/textsize14"
            android:layout_height="wrap_content"
            android:layout_weight="3"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="受让方编号:"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/black_333333"/>

        <EditText
            android:id="@+id/et_no"
            android:layout_width="0dp"
            android:textSize="@dimen/textsize14"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/input_transfer_receiver_no"
            android:textColor="@color/black_333333"
            android:layout_weight="3"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="金额:"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/black_333333"/>

        <EditText
            android:id="@+id/et_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textColor="@color/black_333333"
            android:inputType="number"
            android:textSize="@dimen/textsize14"
            android:hint="@string/input_transfer_price"
            android:layout_weight="3"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_50"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="支付密码:"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/black_333333"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/et_psd"
            android:background="@null"
            android:textSize="@dimen/textsize14"
            android:textColor="@color/black_333333"
            android:inputType="textPassword"
            android:hint="@string/input_transfer_psd"
            android:layout_weight="3"/>

    </LinearLayout>

        <TextView
            android:id="@+id/right_now_transfer"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:text="立即转账"
            android:layout_marginTop="@dimen/margin_30"
            android:background="@drawable/tv_bg_click"
            android:gravity="center"
            android:textSize="@dimen/textsize16"
            android:textColor="@color/white"
            />

    </LinearLayout>
</LinearLayout>
